# physics-sim

src/: OdeSolver.hpp  Particle.cpp  Particle.h  ParticleSystem.cpp  ParticleSystem.h  PhysicalNumbers.hpp  Vec3Physical.cpp  Vec3Physical.hpp  ofApp.cpp  ofApp.h
tests/: CMakeLists.txt  Makefile  Vec3Physical_test.cpp
